--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -28,6 +28,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ae1624e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "today = datetime.date.today()\n",
+    "\n",
+    "weekday_num = today.weekday()\n",
+    "\n",
+    "text = \"\"\n",
+    "\n",
+    "if weekday_num == 0:\n",
+    "    text = \"燃えるゴミ\"\n",
+    "elif weekday_num == 1:\n",
+    "    text = \"\"\n",
+    "elif weekday_num == 2:\n",
+    "    text = \"\"\n",
+    "elif weekday_num == 3:\n",
+    "    text = \"缶、ビン、ペットボトル\"\n",
+    "elif weekday_num == 4:\n",
+    "    text = \"燃えるゴミ\"\n",
+    "elif weekday_num == 5:\n",
+    "    text = \"プラごみ\"\n",
+    "elif weekday_num == 6:\n",
+    "    text = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "a1d37dde",
    "metadata": {},
@@ -53,8 +84,10 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    messages = TextSendMessage(text=\"ちんぽこ\")\n",
-    "    app.push_message(USER_ID, messages=messages)"
+    "    \n",
+    "    if weekday_num != \"\":\n",
+    "        messages = TextSendMessage(text=text)\n",
+    "        app.push_message(USER_ID, messages=messages)"
    ]
   },
   {
@@ -80,10 +113,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7caa7ace",
+   "id": "c265818e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if "
+   ]
   }
  ],
  "metadata": {
